[package]
name = "cluster_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"

[default.limits]
file = "50 MiB"
"file/zip" = "50 MiB"
data-form = "20 MiB"
json = "20 MiB"
bytes = "20 MiB"


